--- a/login.html
+++ b/login.html
@@ -39,14 +39,11 @@
     <div class="container d-flex align-items-center">
 
       <h1 class="logo me-auto"><a href="index.html">Mustang Makeover</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
+
 
       <nav id="navbar" class="navbar">
         <ul>
           <li><a href="index.html">Makeover</a></li>
-
-           <!-- <li><a href="#about">About</a></li> -->
 
            <li><a href="memories.html">Memories</a></li>
 
@@ -60,53 +57,75 @@
     </div>
   </header><!-- End Header -->
 
-  
+  <section>
   <main id="main">
-    <div class="container mt-5">
-      <div class="mb-3 mt-5">
-        <input
+      <div class="container log mt-5  px-5">
+        <div class="card  login-card mt-5 mx-5">
+            <h2 class="login-pass pt-3"><span class="text-red mx-2">Register</span></h2>
+
+          <div class="card-body">
+                    <input
           type="text"
           class="form-control"
           placeholder="name"
           id="name-new"
-        />
-      </div>
-      <div class="mb-3">
-        <input
+          />
+
+                  <input
           type="email"
-          class="form-control"
+          class="form-control mt-3"
           placeholder="email"
           id="email-new"
         />
-      </div>
-      <div class="mb-3">
-        <input
+
+                <input
           type="password"
-          class="form-control"
+          class="form-control mt-3"
           placeholder="pw"
           id="pw-new"
         />
-      </div>
-      <button type="submit" class="btn btn-primary" id="register">
+        <div class="log-btn">
+              <button type="submit" class="btn btn-danger mt-3" id="register">
         Register
       </button>
     </div>
+          </div>
 
-    <div class="container mt-3">
-      <div class="mb-3"></div>
-      <div class="mb-3">
-        <input
+        </div>
+
+      </div>
+            <div class="container log mt-5  px-5">
+        <div class="card login-card  mx-5">
+            <h2 class="login-pass pt-3"> <span class="text-red mt-3 mx-2 ">Login</span></h2>
+
+          <div class="card-body">
+                  <input
           type="email"
-          class="form-control"
+          class="form-control mt-3"
           placeholder="email"
-          id="email"
+          id="email-new"
         />
-      </div>
-      <div class="mb-3">
-        <input type="password" class="form-control" placeholder="pw" id="pw" />
-      </div>
-      <button type="submit" class="btn btn-primary" id="signin">Sign In</button>
+
+                <input
+          type="password"
+          class="form-control mt-3"
+          placeholder="pw"
+          id="pw-new"
+        />
+        <div class="log-btn">
+              <button type="submit" class="btn btn-danger mt-3" id="signin">
+        Sign-in
+      </button>
     </div>
+          </div>
+        </div>
+
+      </div>
+  
+
+
+     
     </main>
+  </section>
   </body>
 </html>
