--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
             <div class="container slide-bg pt-4 pb-4">
               <h2 class="animate__animated animate__fadeInDown"><span class="text-red">Sign up</span> for shifts to clean up around the school.</h2>
               <p class="animate__animated animate__fadeInUp">Revolve around the overconsumption that takes place at ASIJ</p>
+              <a href="#about" class="btn-get-started mt-3 animate__animated animate__fadeInUp" >Read More</a>
 
 
             </div>
